--- a/.github/workflows/build-n-publish.yaml
+++ b/.github/workflows/build-n-publish.yaml
@@ -14,13 +14,13 @@ jobs:
           python-version: 3.8
 
       - name: Install dependencies for EPL
-        working-directory: ./
+        working-directory: ./epl-board
         run: |
           python -m pip install --upgrade pip 
           pip install build twine
 
       - name: Build package
-        working-directory: ./
+        working-directory: ./epl-board
         run: |
           python -m build
           twine check --strict dist/*
