--- a/.github/workflows/build-n-publish.yaml
+++ b/.github/workflows/build-n-publish.yaml
@@ -13,8 +13,7 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Install dependencies for EPL
-        working-directory: ./epl-board
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip 
           pip install build twine
@@ -24,18 +23,16 @@ jobs:
         run: |
           python -m build --outdir dist/
           twine check --strict dist/*
-      
-      - name: Install dependencies for E-Commerce
-        working-directory: ./ecommerce-website-django
-        run: |
-          python -m pip install --upgrade pip 
-          pip install build twine
+          pwd
+          ls
       
       - name: Build package
         working-directory: ./ecommerce-website-django
         run: |
           python -m build --outdir dist/
           twine check --strict dist/*
+          pwd
+          ls
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.8.1
