--- a/.github/workflows/build-n-publish.yaml
+++ b/.github/workflows/build-n-publish.yaml
@@ -36,6 +36,9 @@ jobs:
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.8.1
+        run:
+          pwd
+          ls
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
