--- a/.github/workflows/build-n-publish.yaml
+++ b/.github/workflows/build-n-publish.yaml
@@ -17,7 +17,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip 
           pip install build twine
-
+          pwd
+          ls
+      
       - name: Build package
         working-directory: ./epl-board
         run: |
@@ -36,7 +38,7 @@ jobs:
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.8.1
-        run:
+        run: |
           pwd
           ls
         with:
