--- a/.github/workflows/build-n-publish.yaml
+++ b/.github/workflows/build-n-publish.yaml
@@ -1,14 +1,14 @@
 name: Deploy Python Package to PyPI & update docs
 
 on:
-  push:
+  release:
+    types: [published]
 
 jobs:
   build:
     strategy:
       matrix:
         directory: ['./ecommerce-website-django','./epl-board']
-
 
     runs-on: ubuntu-latest
     steps:
