--- a/.github/workflows/build-n-publish.yaml
+++ b/.github/workflows/build-n-publish.yaml
@@ -6,9 +6,9 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        directory: ['./ecommerce-website-django','./epl-board']
+    # strategy:
+    #   matrix:
+    #     directory: ['./ecommerce-website-django','./epl-board']
 
     runs-on: ubuntu-latest
     steps:
@@ -19,6 +19,7 @@ jobs:
           python-version: 3.8
 
       - name: Install dependencies
+        working-directory: ./ecommerce-website-django
         run: |
           python -m pip install --upgrade pip 
           pip install build twine
@@ -26,7 +27,14 @@ jobs:
           ls
       
       - name: Build package
-        working-directory: ${{ matrix.directory  }}
+        working-directory: ./ecommerce-website-django
+        run: |
+          python -m build --outdir ../dist/
+          twine check --strict ../dist/*
+          pwd
+          ls
+      - name: Build package
+        working-directory: ./epl-board
         run: |
           python -m build --outdir ../dist/
           twine check --strict ../dist/*
@@ -34,12 +42,8 @@ jobs:
           ls
 
       - name: Publish package
-        # working-directory: ./ecommerce-website-django
         uses: pypa/gh-action-pypi-publish@v1.8.1
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
-          # packages: |
-          #   ./epl-board/dist/epl_boardx-*
-          #   ./ecommerce-website-django/dist/ecommerce_website_djangox-*
           verbose: true
