--- a/.github/workflows/build-it.yml
+++ b/.github/workflows/build-it.yml
@@ -34,6 +34,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install build twine
       - name: Build package for epl
         working-directory: ./ecommerce-website-django
         run: |
@@ -50,6 +54,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install build twine
       - name: Build package for ecommernce
         working-directory: ./ecommerce-website-django
         run: |
